Fix width of content-box on small screens
The content-box's padding no longer makes it wider than the viewport.

--- a/source/assets/stylesheets/site.css.scss
+++ b/source/assets/stylesheets/site.css.scss
@@ -20,7 +20,7 @@ body {
 	background-color: $colour-white;
 }
 
-header, footer, .content-box {
+header, footer {
   width: 100%;
 }
 
